fix word wrap in code component

--- a/src/components/code/style.css
+++ b/src/components/code/style.css
@@ -28,6 +28,7 @@
   cursor: auto;
   background-color: black;
   padding: 8px 12px;
+  overflow-wrap: anywhere;
 }
 .code.code__card.resizable {
   resize: both;
